@@ -1,5 +1,5 @@
-12645b595acf6053ff139033a72140d9 *ChangeLog
-9720de5959587e8e43007a0038166a32 *DESCRIPTION
+4779cab7a8fd879a0d4271da736a48fa *ChangeLog
+383519420b7c2f3ebd504f1dffa5c321 *DESCRIPTION
 c8d899b6cf23e215b2a3364238b137e3 *NAMESPACE
 e47af55a197e6cf0ec74a37858307f45 *R/inline.R
 a325916eda08cb0362c625fa22e6e03a *README.md
@@ -7,10 +7,10 @@ a325916eda08cb0362c625fa22e6e03a *README.md
 af105a612169b5e62f3827644b2faab1 *cleanup
 d80e1bc04c33ac2021e05029afa9c95e *inst/doc/RcppClassic-intro.R
 8202adba66c5e301c2f7e9bd5772e1b4 *inst/doc/RcppClassic-intro.Rmd
-52f6699b65a6a7215836738f3bdc82d7 *inst/doc/RcppClassic-intro.pdf
+2f3a23ba46418e877c647513edbadcf0 *inst/doc/RcppClassic-intro.pdf
 b3d861ae17dc10cc7975ce9234b07252 *inst/doc/RcppClassic-unitTests.R
 2225e0c032092459d0b834060a777623 *inst/doc/RcppClassic-unitTests.Rnw
-69980440c334dc5ac2f9f278233d0097 *inst/doc/RcppClassic-unitTests.pdf
+aad9aa5fa2ac257eb0cb135f057e6271 *inst/doc/RcppClassic-unitTests.pdf
 968bb5fc5f64ee24c620915a25f06aef *inst/examples/RcppClassicExample/DESCRIPTION
 091eca92b73bb2dfafc980cc258085df *inst/examples/RcppClassicExample/NAMESPACE
 04f0f50412ff00c383edefe290dc888b *inst/examples/RcppClassicExample/R/twoTimes.R
@@ -25,15 +25,15 @@ cceeafe9dd17cb40364fc39bc41fb6c2 *inst/include/classic/RcppDatetime.h
 7d08076515f7a90a55d4d234bce76d0c *inst/include/classic/RcppDatetimeVector.h
 9edc833093f65b5c21a6d9c26a00e171 *inst/include/classic/RcppFrame.h
 f69ccfa1a933cc2401d02999f2c47bb3 *inst/include/classic/RcppFunction.h
-368389ac57fe4584c9d3d7c36ebc9379 *inst/include/classic/RcppList.h
-ad529f39470c25770c29930a7911e447 *inst/include/classic/RcppList__backward.h
+0fd98192e65dbc37eb0cc36b766e6d29 *inst/include/classic/RcppList.h
+23adb02a55e74e285e6193b10e2b3fd9 *inst/include/classic/RcppList__backward.h
 ac9dd493736f4b3d38c1f4d881ed5914 *inst/include/classic/RcppMatrix.h
 19e3abb0909c4cb91db447f25153a451 *inst/include/classic/RcppMatrixView.h
 f2fa071f523f65258e2c42ef16eb79d5 *inst/include/classic/RcppMatrix__backward.h
 2b8b06a5fd239803bf1c0d86b14ac8b2 *inst/include/classic/RcppNumList.h
 8cd01c5818083a3532035be5e684b127 *inst/include/classic/RcppParams.h
-df3304bd3d7e22b891dc45f5dfa8c25a *inst/include/classic/RcppResultSet.h
-fbd796e1d4b40f7bfcb712fe509a5643 *inst/include/classic/RcppResultSet__backward.h
+749c492108b7a55c96744e60ac997d7d *inst/include/classic/RcppResultSet.h
+1a6616297a3d1826d5cc023d078c69cd *inst/include/classic/RcppResultSet__backward.h
 9a4daf859eeafa692933181518994435 *inst/include/classic/RcppStringVector.h
 d39745f053bbb559108a7f7fed12c1f3 *inst/include/classic/RcppStringVectorView.h
 8b9d96fa5f526af52ea9da3f1c3a039e *inst/include/classic/RcppVector.h
