@@ -1,9 +1,7 @@
-// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4; indent-tabs-mode: nil; -*-
-//
 // RcppResultSet.h: RcppClassic R/C++ interface class library -- Results back to R
 //
 // Copyright (C) 2010 - 2013  Dirk Eddelbuettel and Romain Francois
-// Copyright (C) 2014 - 2017  Dirk Eddelbuettel
+// Copyright (C) 2014 - 2018  Dirk Eddelbuettel
 //
 // This file is part of RcppClassic.
 //
@@ -23,17 +21,17 @@
 #ifndef RcppResultSet__backward_h
 #define RcppResultSet__backward_h
 
-template <typename T> 
-void RcppResultSet::add__impl( const std::string& name, const T& t ){
+template <typename T>
+void RcppResultSet::add__impl(const std::string& name, const T& t) {
     push_back( name, Rcpp::wrap(t) );
 }
 
-template <typename T> 
-void RcppResultSet::add__matrix__std( const std::string& name, const std::vector<std::vector<T> >& mat ) throw(std::range_error) {
+template <typename T>
+void RcppResultSet::add__matrix__std(const std::string& name, const std::vector<std::vector<T> >& mat) {
     int nx = (int)mat.size();
     if (nx == 0)
         throw std::range_error("RcppResultSet::add: zero length vector<vector<> >");
-    
+
     int ny = (int)mat[0].size();
     if (ny == 0)
         throw std::range_error("RcppResultSet::add: no columns in vector<vector<> >");
@@ -46,8 +44,8 @@ void RcppResultSet::add__matrix__std( const std::string& name, const std::vector
 }
 
 
-template <typename T> 
-void RcppResultSet::add__matrix( const std::string& name, T** input, int nx, int ny) {
+template <typename T>
+void RcppResultSet::add__matrix(const std::string& name, T** input, int nx, int ny) {
     Rcpp::Matrix< Rcpp::traits::r_sexptype_traits<T>::rtype > mat( nx, ny ) ;
     for (int i = 0; i < nx; i++)
         for (int j = 0; j < ny; j++)
